<resources>
    <string name="app_name">StoreApp</string>
    <string name="price">$%s</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="description">Description</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="your_cart">Your Cart</string>
    <string name="item_qty">%d items</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="remove_dialog_title">Remove %s from your cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_product">Search Product</string>
    <string name="winter_coat">"Winter Coat"</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_summary">Order Summary</string>
    <string name="go_to_payment">Go To Payment</string>
    <string name="order_quantity">x%d</string>
    <string name="input_new_address">Input new address</string>
    <string name="save">Save</string>
    <string name="voucher">Voucher</string>
    <string name="use">Use</string>
    <string name="enter_voucher_code">Enter voucher code</string>
    <string name="favorite_products">Favorite Products</string>
    <string name="no_favorite_products">No favorite products :(</string>
    <string name="card_number">Card Number</string>
    <string name="payment">Payment</string>
    <string name="expiration">Expiration</string>
    <string name="security_code">Security Code</string>
    <string name="subtotal">Subtotal</string>
    <string name="taxes">Taxes 10%</string>
    <string name="place_order">Place Order</string>
    <string name="card_holder">Card Holder</string>
    <string name="save_card_data">Save card data for future payments</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favorite">My Favorite</string>
    <string name="credits_amp_coupons"><![CDATA[Credits & Coupons]]></string>
    <string name="account_settings">Account Settings</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
</resources>