<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/remove_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/no"
        android:textColor="@color/color_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/yes_btn"
        app:layout_constraintEnd_toStartOf="@+id/yes_btn"
        app:layout_constraintTop_toTopOf="@+id/yes_btn" />

    <TextView
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/yes"
        android:textColor="#C53030"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

</androidx.constraintlayout.widget.ConstraintLayout>