<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.checkout.CheckoutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/checkout_back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/checkout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/checkout_back_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkout_back_btn" />

        <TextView
            android:id="@+id/shipping_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_address"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkout_back_btn" />


        <TextView
            android:id="@+id/edit_address_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/color_alert"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/shipping_address_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shipping_address_text" />


        <TextView
            android:id="@+id/save_address_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/color_alert"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/shipping_address_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shipping_address_text" />

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shipping_address_text" />

        <TextView
            android:id="@+id/checkout_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location_icon"
            app:layout_constraintTop_toTopOf="@+id/location_icon"
            tools:text="B71 Kenangan Street (Between Jones &amp; Leavenworth St.), San Fransisco" />

        <EditText
            android:id="@+id/edit_address_textbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_background"
            android:visibility="invisible"
            android:padding="8dp"
            android:maxLines="2"
            android:hint="@string/input_new_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/checkout_address"
            app:layout_constraintTop_toTopOf="@+id/location_icon" />

        <TextView
            android:id="@+id/order_summary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkout_address" />

        <TextView
            android:id="@+id/edit_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/color_alert"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/order_summary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/order_summary_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_summary_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/order_summary_item"
            tools:itemCount="2"
            android:layout_marginVertical="12dp"
            app:layout_constraintTop_toBottomOf="@+id/order_summary_text" />

        <TextView
            android:id="@+id/voucher_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voucher"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_summary_rv" />

        <EditText
            android:id="@+id/voucher_textbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/textbox_background"
            android:hint="@string/enter_voucher_code"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/use_voucher_btn"
            app:layout_constraintEnd_toStartOf="@+id/use_voucher_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voucher_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/use_voucher_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/use"
            android:paddingVertical="14dp"
            android:textAllCaps="false"
            app:cornerRadius="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voucher_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_payment_btn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_payment"
            app:layout_constraintTop_toBottomOf="@+id/voucher_textbox"
            android:layout_marginTop="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>