<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/empty_cart_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/empty_cart_image"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/empty_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/empty_cart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_cart_is_empty"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/empty_cart_image"
            app:layout_constraintStart_toStartOf="@+id/empty_cart_image"
            app:layout_constraintTop_toBottomOf="@+id/empty_cart_image" />

        <TextView
            android:id="@+id/empty_cart_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="Looks like you haven\'t added\nanything to our cart yet"
            app:layout_constraintEnd_toEndOf="@+id/empty_cart_title"
            app:layout_constraintStart_toStartOf="@+id/empty_cart_title"
            app:layout_constraintTop_toBottomOf="@+id/empty_cart_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/empty_cart_btn"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_shopping"
            android:paddingEnd="48dp"
            android:paddingStart="48dp"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="@+id/empty_cart_subtitle"
            app:layout_constraintStart_toStartOf="@+id/empty_cart_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/empty_cart_subtitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cart_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cart_back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/your_cart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/your_cart"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cart_back_btn"
            app:layout_constraintTop_toBottomOf="@+id/cart_back_btn" />

        <TextView
            android:id="@+id/cart_item_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/your_cart_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/your_cart_text"
            tools:text="3 items" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_product_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_line"
            app:layout_constraintTop_toBottomOf="@+id/your_cart_text"
            tools:itemCount="3"
            tools:listitem="@layout/cart_item" />

        <ImageView
            android:id="@+id/horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/bottom_sheet_horizontal_line"
            app:layout_constraintBottom_toTopOf="@+id/subtotal_text" />

        <TextView
            android:id="@+id/subtotal_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subtotal"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/cart_product_subtotal_price"
            app:layout_constraintStart_toStartOf="@+id/your_cart_text"
            app:layout_constraintTop_toTopOf="@+id/cart_product_subtotal_price" />

        <TextView
            android:id="@+id/cart_product_subtotal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/cart_checkout_btn"
            app:layout_constraintEnd_toEndOf="@+id/cart_item_size"
            tools:text="$360" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cart_checkout_btn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>